# epub-gen

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  compress.rs  epub.rs  extract.rs  main.rs  pipeline.rs
template/: book.css  book.html
